fix student/admin list and minor template tweaks

--- a/application/templates/admin.html
+++ b/application/templates/admin.html
@@ -5,7 +5,7 @@ Administration panel
 {% endblock %}
 {% block content %}
 
-<h2 style="text-align:center;">Fieldwork Online: Admin Interface</h2>
+<!--<h2 style="text-align:center;">Fieldwork Online: Admin Interface</h2>-->
 <div class="panel panel-default" style="margin-top:15px;">
 	<div class="panel-heading">
 		<strong>List of fieldwork projects</strong>
