less debug info, template tweaks

--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -40,13 +40,9 @@
 			}
 
 			{% if config["DEBUG"] == False %}
-
-			div#messages li.category-other,
-			div#messages li.category-debug,
-			div#messages li.category-info {
+			div#messages li.category-debug {
 				display:none;
 			}
-
 			{% endif %}
 
 
