--- a/application/templates/header.html
+++ b/application/templates/header.html
@@ -64,6 +64,7 @@
 
 
   <form class="navbar-form navbar-right" role="form">
+  <a href="/manual/" type="submit" class="btn btn-default" style="border-color:#444;background-color:#222;color:#ddd;"><i class="fa fa-book"></i></a>
   {% if current_user.is_admin %}
   <a href="/admin" type="submit" class="btn btn-default" style="border-color:#444;background-color:#222;color:#ddd;"><i class="fa fa-wrench"></i> Settings</a>
   {% endif %}
