fix comment notify

--- a/application/templates/project.html
+++ b/application/templates/project.html
@@ -79,6 +79,18 @@
 							<td style="text-align:right;">
 
 								{% for membership in user.memberships %}
+									{% if membership.campaign_id == project.id %}
+										{% if membership.last_post and comments[user.username] %}
+											{% if membership.last_post > comments[user.username] %}
+											        <a class="btn btn-success btn-sm" href="/projects/{{project.slug}}/{{user.id}}/feedback" >
+											        <i class="fa fa-comments"></i></a>
+											{% else %}
+											        <a class="btn btn-default btn-sm" href="/projects/{{project.slug}}/{{user.id}}/feedback" style="background-color:#fff;">
+											        <i class="fa fa-comments"></i></a>
+											{% endif %}
+										{% endif %}
+									{% endif %}
+
 									{% if membership.campaign_id == project.id and current_user.is_admin %}
 
 										{% if membership.last_post > comments[user.username] %}
@@ -160,8 +172,10 @@
 							<td>
 							{% for membership in user.memberships %}
 								{% if membership.campaign_id == project.id %}
+								<!--
 								Last data upload: <code>{{membership.text_lastactivity}}</code><br/>
 								Last comment by {{user.username}}:  {{ membership.last_post }}
+								-->
 								{% endif %}
 								<!--
 								{% if membership.campaign_id == project.id %}
