--- a/application/templates/project/maps.html
+++ b/application/templates/project/maps.html
@@ -13,7 +13,7 @@
   <script>
     WMS_URL='/wms/{{wms_key}}';
     BACKGROUND_LAYERS={
-        url: '{{mapserver_url}}',
+        url: '{{request.host}}',
         params: {
           'LAYERS':'{{project.background_layer_default}}',
           'TILED': true,
